# programming_challenges

NitroCppTest-LeonardoRibeiro/: CMakeLists.txt  Readme.md
NitroCppTest-LeonardoRibeiro/include/: intersection_detector.h  rectangle.h  rectangle_input_manager.h
NitroCppTest-LeonardoRibeiro/src/: intersection_detector.cpp  main.cpp  rectangle.cpp  rectangle_input_manager.cpp
NitroCppTest-LeonardoRibeiro/test/: CMakeLists.txt  intersection_detector_test.cpp  rectangle_input_manager_test.cpp  rectangle_test.cpp
